fixed footer issues and some spacing issues caused by the fixes.

--- a/media.css
+++ b/media.css
@@ -21,7 +21,7 @@
     }
 
     .centre-s{
-        margin: auto;
+        margin: 0 auto;
         /* background: lightblue; */
     }
 
